fixed word wrap bug in user messages

--- a/frontend/src/components/chat_elements/othersChat.css
+++ b/frontend/src/components/chat_elements/othersChat.css
@@ -18,6 +18,7 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 1;
+    word-break: break-word;
 }
 .others_chat_body .msg_holder .msg{
     white-space: pre-line;
